Add textarea to div original

--- a/main.html
+++ b/main.html
@@ -16,9 +16,11 @@
 	<input class="translateBtn" type="button" value="Traduire"  />
 	<div class="buttons-wrapper"></div>
 	<div class="original">
+	    <textarea class="original">
 	    ---* Titre
 		---*
 		---*lol
+	    </textarea>    
 	</div>
 	<div class="translation"></div>
     </body>
