Add textarea to translation div

--- a/main.html
+++ b/main.html
@@ -20,9 +20,12 @@
 	    ---* Titre
 		---*
 		---*lol
-	    </textarea>    
+	    </textarea>
 	</div>
-	<div class="translation"></div>
+	<div class="translation">
+	    <textarea>
+	    </textarea>
+	</div>
     </body>
     <script>
      window.onload = updateTranslation;
@@ -41,9 +44,9 @@
 	 {
 	     var stringRepeated = "";
 	     for(var i = 0; i < nTimes; i++)
-	     {
-		 stringRepeated += stringToRepeat;
-	     }
+		 {
+		     stringRepeated += stringToRepeat;
+		 }
 	     return stringRepeated;
 	 }
 
