Remove wrongly added class of textarea

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<input class="translateBtn" type="button" value="Traduire"  />
 	<div class="buttons-wrapper"></div>
 	<div class="original">
-	    <textarea class="original">
+	    <textarea>
 	    ---* Titre
 		---*
 		---*lol
