--- a/main.html
+++ b/main.html
@@ -10,6 +10,10 @@
 	     border: 1px solid black;
 	     margin-left: 1%;
 	 }
+	 .original > textarea, .translation > textarea {
+	     height: 100%;
+	     width: 100%;
+	     }
 	</style>
     </head>
     <body>
