Add reference to script file

--- a/main.html
+++ b/main.html
@@ -21,9 +21,9 @@
 	<div class="buttons-wrapper"></div>
 	<div class="original">
 	    <textarea>
-	    ---* Titre
-		---*
-		---*lol
+---* Titre
+---*
+---*lol
 	    </textarea>
 	</div>
 	<div class="translation">
@@ -31,36 +31,5 @@
 	    </textarea>
 	</div>
     </body>
-    <script>
-     window.onload = updateTranslation;
-
-     function updateTranslation()
-     {
-	 var originalPanel = document.querySelector(".original > textarea");
-	 var originalText = originalPanel.value;
-	 var translationPanel = document.querySelector(".translation > textarea");
-	 translationPanel.value = actionDiagramTranslationFrom(originalText);
-     }
-
-     function actionDiagramTranslationFrom(text)
-     {
-	 function repeat(stringToRepeat, nTimes)
-	 {
-	     var stringRepeated = "";
-	     for(var i = 0; i < nTimes; i++)
-		 {
-		     stringRepeated += stringToRepeat;
-		 }
-	     return stringRepeated;
-	 }
-
-	 var unicode_BoxDrawingsLightHorizontal = "&#9472;";
-	 var unicode_Asterisk = "&#8727;"
-	 var replacementString = repeat(unicode_BoxDrawingsLightHorizontal, 3) + unicode_Asterisk;
-	 var regex = "---*";
-	 var diagramText = text.replace(regex, replacementString);
-	 return diagramText;
-
-     }
-    </script>
+    <script src="script.js"></script>
 </html>
