--- a/main.html
+++ b/main.html
@@ -1,20 +1,6 @@
 <html>
     <head>
-
-	<style>
-	 .original, .translation {
-	     height: 400px;
-
-	     width: 47%;
-	     float: left;
-	     border: 1px solid black;
-	     margin-left: 1%;
-	 }
-	 .original > textarea, .translation > textarea {
-	     height: 100%;
-	     width: 100%;
-	     }
-	</style>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     </head>
     <body>
 	<input class="translateBtn" type="button" value="Traduire"  />
