Add template of original text

--- a/main.html
+++ b/main.html
@@ -8,9 +8,53 @@
 	<div class="buttons-wrapper"></div>
 	<div class="original">
 	    <textarea>
+// Cliquez sur "Traduire" pour transformer ce code en DA
+
 ---* Titre
----*
----*lol
+ Obtenir var // Coloration des mots clés "Obtenir", "Sortir", ...
+ var2 = "Principe de programmation" // Coloration des guillemets
+ Sortir var
+
+ // Condition != <= >= < >
+
+ if (Condition)
+  ...
+ else
+  ...
+ ___
+
+ // Boucle
+
+ do while (Condition)
+  ...
+ ===
+ do until (Condition)
+  ...
+ ===
+ do
+  ...
+ === while (Condition)
+
+ // Switch / Case
+
+ if (Var = 1)
+  ...
+ elseif (Var = 2)
+  ...
+ else
+  ...
+ ___
+
+ // Module
+
+ [module=Titre;Argument1,Argument2;Argument1,Argument4]
+ [fonct1=Titre;;Argument2]
+ [fonct2=Titre]
+
+ // Traitement de pointeur
+
+ Ptr=Ptr->PtrSuiv
+___
 	    </textarea>
 	</div>
 	<div class="translation">
