Translate on button pushed

--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     </head>
     <body>
-	<input class="translateBtn" type="button" value="Traduire"  />
+	<input id="translateBtn" type="button" value="Traduire"  />
 	<div class="buttons-wrapper"></div>
 	<div class="original">
 	    <textarea>
